--- a/views/404.ejs
+++ b/views/404.ejs
@@ -1,12 +1,12 @@
 
 	<div class="container">
-		<h1 class="text-center text-white">
+		<h1 class="text-center">
 			404  -  Página no encontrada
 		</h1>
-		<p class="text-center text-white"><strong>Estamos construyendo el sitio... tenga un poco de paciencia por favor</strong></p>
+		<p class="text-center"><strong>Estamos construyendo el sitio... tenga un poco de paciencia por favor</strong></p>
 	</div>
 
 	<hr style="border: 3px solid;">
 	<div class="container">
-		<h5 class="text-center"><a href="/" class="text-white"><img src="//cdn-icons-png.flaticon.com/128/2484/2484004.png" alt=""></br> Regresar a la página principal</a></h5>
+		<h5 class="text-center"><a href="/" ><img src="//cdn-icons-png.flaticon.com/128/2484/2484004.png" alt=""></br> Regresar a la página principal</a></h5>
 	</div>
