--- a/vista/parcial/home.ejs
+++ b/vista/parcial/home.ejs
@@ -1,20 +1,21 @@
 <section id="banner-top">
 	<div class="contenido">
-		<div class="col">
-			<p>Deportes en vivo,<br>música, noticias y<br>podcasts <i class="flecha"></i></p>
+		<div class="col col-left">
+			<p>Deportes en vivo 2,<br>música, noticias y<br>podcasts <i class="flecha"></i></p>
 			<div class="search">
-				<i class="lupa"></i><input type="text" value="" placeholder="Empieza a buscar ahora" onchange="location.href='/buscar/?s='+this.value">
+				<i class="icon-search "></i><input type="text" value="" placeholder="Empieza a buscar ahora" onchange="location.href='/buscar/?s='+this.value">
 			</div>
+			
 		</div>
 		<div class="col col-rigth">
 			<img src="/img/Group 1.png" alt="">
 		</div>
-		<div class="col movil">
+	 <div class="col movil">
 			<div class="one">
 
 			</div>
 			<div class="two"></div>
-		</div>
+		</div> 
 	</div>
 </section>
 <section id="resultSearch">
@@ -47,9 +48,7 @@
 				</div>
 			</a>
 		</div>
-		<div class="slider">
-			<img src="/img/exitos.png" alt="">
-		</div>
+	
 	</div>
 </section>
 <section id="emisoras">
