--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -9,7 +9,8 @@ font-size: 14px;
         grid-template-columns: 25% 16.66666667% 16.66666667% 16.66666667% 16.66666667% 16.66666667% ;
         grid-template-areas: 'col1 . col2 col3 col4 col5 col6';
        font-family: $font_1;
-        height: 400px;
+        min-height: 400px;
+        height: auto;
         align-items: center;
     }
 }
