--- a/vista/index.ejs
+++ b/vista/index.ejs
@@ -112,7 +112,7 @@
 				</div>
 				<p>Música, radio y podcasts, todo gratis. Escucha en línea o descarga la aplicación</p>
 				<div class="group-social">
-					<i class="facebook"></i><i class="instagram"></i><i class="twiter"></i>
+					<i class="icon-facebook ico-footer"></i><i class="icon-instagram ico-footer"></i><i class="icon-twitter ico-footer"></i>
 				</div>
 			</div>
 			<div class="col memu-footer">
