enlace de iconos footer

--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -73,6 +73,7 @@ address .group-social i{
 address i{
 	font-size: 24px;
     transition: color ease-in-out .5s;
+    color: #fff;
 }
 address{
     .icon-facebook:hover{
