--- a/vista/index.ejs
+++ b/vista/index.ejs
@@ -112,7 +112,17 @@
 				</div>
 				<p>Música, radio y podcasts, todo gratis. Escucha en línea o descarga la aplicación</p>
 				<div class="group-social">
-					<i class="icon-facebook ico-footer"></i><i class="icon-instagram ico-footer"></i><i class="icon-twitter ico-footer"></i>
+					<a href="https://m.facebook.com/Miradioemisoras/">
+						<i class="icon-facebook ico-footer"></i>
+					</a></i>
+					<a href="https://www.instagram.com/miradioemisoras/">
+						<i class="icon-instagram ico-footer"></i>
+					</a>
+					<a href="https://twitter.com/MiRadioEmisoras">
+						<i class="icon-twitter ico-footer"></i>
+					</a>
+					
+					
 				</div>
 			</div>
 			<div class="col memu-footer">
