--- a/vista/index.ejs
+++ b/vista/index.ejs
@@ -30,6 +30,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title><%- typeof titulo != 'undefined'?titulo:'Inicio' %> - Mi Radio Emisoras</title>
 	<link rel="stylesheet" href="/css/main.css?<%- Date.now() %>">
+	<link rel="stylesheet" href="/css/tailwind.css>">
 	<link rel="stylesheet" href="/css/iconos.css">
 	<script src="/js/extractcolor.js"></script>
 	<script src="/js/script.js?<%- Date.now() %>"></script>
