--- a/vista/parcial/registro.ejs
+++ b/vista/parcial/registro.ejs
@@ -1,3 +1,5 @@
-<section id="banner-top-registro">
-	<h2>Pagina registro</h2>
-</section>
+<div class="titulo container mx-auto p-4">
+	<button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
+		Button
+	  </button>
+</div>
